--- a/templates/donors/clinical_search_facility.html
+++ b/templates/donors/clinical_search_facility.html
@@ -393,7 +393,7 @@
                                     <div class="my-2">
                                         For all cancer types:
                                     </div>
-                                    <div>
+                                    <div class="table-responsive">
                                         <table class="table table-striped">
                                             <tbody>
                                             <tr>
@@ -506,7 +506,6 @@
                                             </tr>
                                             </tbody>
                                         </table>
-
                                     </div>
                                 </div>
                                 <div id="options-pt2" class="mt-4 border rounded-2 p-3">
@@ -521,7 +520,7 @@
                                     <div class="my-2">
                                         For all cancer types:
                                     </div>
-                                    <div>
+                                    <div class="table-responsive">
                                         <table class="table table-striped">
                                             <tbody>
                                             <tr>
@@ -653,7 +652,7 @@
                                         This section will enable you to select cancers based on the degree invasion into
                                         local lymph nodes. The categories are as follows:
                                     </div>
-                                    <div>
+                                    <div class="table-responsive">
                                         <table class="table table-striped">
                                             <tbody>
                                             <tr>
@@ -797,7 +796,7 @@
                                                 data-target="#options-pt4">Reset
                                         </button>
                                     </div>
-                                    <div class="mt-2">
+                                    <div class="mt-2 table-responsive">
                                         <table class="table table-striped">
                                             <tbody>
                                             <tr>
@@ -827,7 +826,7 @@
                                                 data-target="#options-pt5">Reset
                                         </button>
                                     </div>
-                                    <div class="mt-2">
+                                    <div class="mt-2 table-responsive">
                                         <table class="table table-striped">
                                             <tbody>
                                             <tr>
