--- a/templates/donors/dashboard.html
+++ b/templates/donors/dashboard.html
@@ -83,13 +83,13 @@
             </div>
         </div>
         <div class="row pb-3">
-            <div class="col">
-                <div class="d-grid">
+            <div class="col-md mb-1">
+                <div class="d-grid gap-2">
                     <a class="btn btn-primary" href="{% url 'search_tissue_samples' %}">Proceed to Search Samples <i
                             class="fas fa-angle-double-right d-lg-inline d-none"></i></a>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-md">
                 <div class="d-grid">
                     <a class="btn btn-primary" href="{% url 'make_application' %}"><i class="fas fa-edit"></i> Make
                         Application</a>
@@ -98,10 +98,6 @@
         </div>
         <div class="row pb-5">
             <div class="col-lg-6 mb-3">
-{#                <div class="d-grid gap-2 mb-3">#}
-{#                    <a class="btn btn-primary" href="{% url 'search_tissue_samples' %}">Proceed to Search Samples <i#}
-{#                            class="fas fa-angle-double-right"></i></a>#}
-{#                </div>#}
                 <div class="border rounded bg-light p-3">
                     <div class="fw-bold fs-6">
                         My Saved Searches
