text edited, and the link to sample_application is removed

--- a/templates/ctb/research.html
+++ b/templates/ctb/research.html
@@ -36,9 +36,7 @@
                         availability of samples and data that match the search criteria. Interested researchers can
                         submit a request for data and materials using an application form and entering key information
                         on the research question, study design, laboratory and analytic methods, as well as researcher
-                        qualifications.<br><a href="{% url 'sample_application' %}"
-                                           rel="noopener noreferrer" target="_blank">View a sample application <i
-                            class="fas fa-external-link-alt"></i></a>
+                        qualifications.
                     </div>
                     <div class="mt-3">The CTB will communicate with researchers who submit a request, if the questions
                         in their proposal have been addressed by previous projects or questions or is likely to produce
