--- a/templates/ctb/ctb_search.html
+++ b/templates/ctb/ctb_search.html
@@ -31,6 +31,10 @@
                     {% if q_keyword %}
                         <div class="my-3"><span class="fw-bold">Results for</span>: <span
                                 class="fst-italic">{{ q_keyword }}</span></div>
+                    {% else %}
+                        <div>
+                        No search term was provided. Please revise your search.
+                        </div>
                     {% endif %}
                     <div class="my-3">
                         <div class="gcse-searchresults-only"></div>
