--- a/templates/base.html
+++ b/templates/base.html
@@ -78,15 +78,14 @@
     <div class="container-fluid">
         <!-- Site Messages -->
         {#        <div class="row">#}
-        <div class="col" style="z-index: 100;">
+        <div class="row">
             {% if messages %}
                 {% autoescape off %}
                     {% for message in messages %}
                         {% if message.tags == 'error' or message.tags == 'warning' %}
-                            <div class="alert alert-{{ message.tags }} alert-dismissible">
-                                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span
-                                        class="sr-only">Close</span></button>
+                            <div class="mb-0 alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
                                 {{ message }}
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                             </div>
                         {% endif %}
                     {% endfor %}
